--- a/index.html
+++ b/index.html
@@ -56,16 +56,16 @@
     <h1  class="taska" style="font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif">NUR QASIH</h1>
     <h6 style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif">PAKEJ BULANAN YANG DITAWARKAN:</h6>
     <a  href="pakej1.html">
-      <img src="img/pakej1.png" alt="pakej1" class="pakej" style="width:160px;"></img>
+      <img src="img/pakej1.png" alt="pakej1" class="pakej" style="width:35%;"></img>
     </a>
     <a  href="pakej2.html">
-      <img src="img/pakej2.png" alt="pakej2" class="pakej" style="width:160px"></img>
+      <img src="img/pakej2.png" alt="pakej2" class="pakej" style="width:35%"></img>
     </a>
     <a  href="pakej3.html">
-      <img src="img/pakej3.png" alt="pakej3" class="pakej" style="width:160px"></img>
+      <img src="img/pakej3.png" alt="pakej3" class="pakej" style="width:35%"></img>
     </a>
     <a  href="pakej4.html">
-      <img src="img/pakej4.png" alt="pakej4" class="pakej" style="width:160px"></img>
+      <img src="img/pakej4.png" alt="pakej4" class="pakej" style="width:35%"></img>
     </a>
     </div>
   </div>
