--- a/index.html
+++ b/index.html
@@ -2,15 +2,16 @@
 <html>
 <head>
   <title >Taska Nur Qasih</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     body {
-      margin: 0;
-			padding: 0;
+	    margin: 0;
+	    padding: 0;
     }
     .section {
-      height: 100vh;
-			display: flex;
-      color: #ffffff;
+	    height: 100vh;
+	    display: flex;
+	    color: #ffffff;
     }
     .section1{
       background-image: url("img/background1.png");
