--- a/pakej1.html
+++ b/pakej1.html
@@ -4,7 +4,8 @@
         <title>PAKEJ 1</title>
         <style>
             .container {
-                margin-left: 10%;
+                margin-left: 5%;
+                margin-right: 5%;
                 text-align: center;
                 font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
                 letter-spacing: 1px;
@@ -40,6 +41,6 @@
             <span>- Tuala Mandi</span><br>
             <span>- Sekurang-kurangnya 3 Pasang Pakaian</span><br><br><br>
             <a href="https://wa.link/slmtw8">
-            <button class="button" style="height:34px">DAFTAR <img src="img/whatsapp.svg" style="width:15px"></button></a>
+            <button class="button" style="height:50%">DAFTAR <img src="img/whatsapp.svg" style="width:50%"></button></a>
     </body>
 </html>
