--- a/pakej1.html
+++ b/pakej1.html
@@ -23,7 +23,7 @@
         </style>
         <div class="arrow">
         <a href="index.html">
-            <img src="img/arrow-left-circle.svg" style="width:30px;">
+            <img src="img/arrow-left-circle.svg" style="width:50%;">
             </a>
         </div>
         <h1 style="color: darkorange;">PAKEJ 1</h1>
@@ -41,6 +41,6 @@
             <span>- Tuala Mandi</span><br>
             <span>- Sekurang-kurangnya 3 Pasang Pakaian</span><br><br><br>
             <a href="https://wa.link/slmtw8">
-            <button class="button" style="height:110%">DAFTAR <img src="img/whatsapp.svg" style="width:50%"></button></a>
+            <button class="button" style="width:25%; font-size:200%">DAFTAR <img src="img/whatsapp.svg" style="width:35%"></button></a>
     </body>
 </html>
