--- a/pakej2.html
+++ b/pakej2.html
@@ -21,7 +21,7 @@
         </style>
         <div class="arrow">
         <a href="index.html">
-            <img src="img/arrow-left-circle.svg" style="width:30px;">
+            <img src="img/arrow-left-circle.svg" style="width:8%;">
             </a>
         </div>
         <h1 style="color: darkorange;">PAKEJ 2</h1>
@@ -39,6 +39,6 @@
             <span>- Tuala Mandi</span><br>
             <span>- Sekurang-kurangnya 4 Pasang Pakaian</span><br><br><br>
             <a href="https://wa.link/z8mw29">
-                <button class="button" style="height:34px">DAFTAR <img src="img/whatsapp.svg" style="width:15px"></button></a>
+               <button class="button" style="width:25%; font-size:200%">DAFTAR <img src="img/whatsapp.svg" style="width:25%"></button></a>
     </body>
 </html>
