--- a/pakej3.html
+++ b/pakej3.html
@@ -22,7 +22,7 @@
         </style>
         <div class="arrow">
         <a href="index.html">
-            <img src="img/arrow-left-circle.svg" style="width:30px;">
+            <img src="img/arrow-left-circle.svg" style="width:8%;">
             </a>
         </div>
         <h1 style="color: darkorange;">PAKEJ 3</h1>
@@ -40,6 +40,6 @@
             <span>- Tuala Mandi</span><br>
             <span>- Sekurang-kurangnya 3 Pasang Pakaian</span><br><br><br>
         <a href="https://wa.link/e5le76">
-            <button class="button" style="height:34px">DAFTAR <img src="img/whatsapp.svg" style="width:15px"></button></a>
+            <button class="button" style="width:25%; font-size:200%">DAFTAR <img src="img/whatsapp.svg" style="width:25%"></button></a>
     </body>
 </html>
