--- a/pakej3.html
+++ b/pakej3.html
@@ -4,7 +4,8 @@
         <title>PAKEJ 3</title>
         <style>
             .container {
-                margin-left: 10%;
+                margin-left: 5%;
+                margin-right: 5%;
                 text-align: center;
                 font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
                 letter-spacing: 1px;
