--- a/pakej4.html
+++ b/pakej4.html
@@ -40,7 +40,7 @@
             <span>- Susu</span><br>
             <span>- Tuala Mandi</span><br>
             <span>- Sekurang-kurangnya 4 Pasang Pakaian</span><br><br><br>
-            <a href="hhttps://wa.link/yexty0">
+            <a href="https://wa.link/yexty0">
                 <button class="button" style="width:25%; font-size:200%">DAFTAR <img src="img/whatsapp.svg" style="width:25%"></button></a>
     </body>
 </html>
